support login, logout and refresh-token APIs
