# api/gen/unified-openapi/api_service/openapi/openapi.yaml
@@ -74,20 +74,18 @@ paths:
       parameters:
       - explode: false
         in: header
-        name: X-Session-Id
-        required: true
-        schema:
-          format: uuid
-          type: string
-        style: simple
-      - explode: false
-        in: header
         name: X-Request-Id
         required: true
         schema:
           format: ascii
           type: string
         style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RefreshTokenBody'
+        required: true
       responses:
         "200":
           description: Successful operation
@@ -120,7 +118,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/RefreshTokenRequestBody'
+              $ref: '#/components/schemas/RefreshTokenBody'
         required: true
       responses:
         "200":
@@ -136,12 +134,12 @@ paths:
                 $ref: '#/components/schemas/Error'
           description: Error if API token key is not set or invalid or has already
             expired
-        "404":
+        "400":
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-          description: Resource not found
+          description: Bad request
       summary: Renew refresh_token and access token
       tags:
       - Users
@@ -476,13 +474,15 @@ components:
       - nick_name
       - password
       type: object
-    RefreshTokenRequestBody:
+    RefreshTokenBody:
       example:
         refresh_token: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
       properties:
         refresh_token:
           example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
           type: string
+      required:
+      - refresh_token
       type: object
     Pong:
       example:
@@ -536,31 +536,13 @@ components:
     RefreshTokenResponse:
       example:
         access_token: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
-        refresh_token: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
-        refresh_token_expired_at: 2022-01-01T00:00:00Z
-        session_id: 123e4567-e89b-12d3-a456-426655440000
       properties:
-        session_id:
-          description: uuid string
-          example: 123e4567-e89b-12d3-a456-426655440000
-          type: string
         access_token:
           description: jwt string
           example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
           type: string
-        refresh_token:
-          description: jwt string
-          example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
-          type: string
-        refresh_token_expired_at:
-          description: timestamp
-          example: 2022-01-01T00:00:00Z
-          type: string
       required:
       - access_token
-      - refresh_token
-      - refresh_token_expired_at
-      - session_id
       title: RefreshTokenResponse
       type: object
   securitySchemes:
