# internal/app/p2m_api/gen/api/service.types.go
@@ -3,10 +3,6 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.3.0 DO NOT EDIT.
 package p2m_api
 
-import (
-	openapi_types "github.com/oapi-codegen/runtime/types"
-)
-
 const (
 	BearerAuthScopes = "BearerAuth.Scopes"
 )
@@ -49,24 +45,15 @@ type Pong struct {
 	Ping string `json:"ping"`
 }
 
-// RefreshTokenRequestBody defines model for RefreshTokenRequestBody.
-type RefreshTokenRequestBody struct {
-	RefreshToken *string `json:"refresh_token,omitempty"`
+// RefreshTokenBody defines model for RefreshTokenBody.
+type RefreshTokenBody struct {
+	RefreshToken string `json:"refresh_token"`
 }
 
 // RefreshTokenResponse defines model for RefreshTokenResponse.
 type RefreshTokenResponse struct {
 	// AccessToken jwt string
 	AccessToken string `json:"access_token"`
-
-	// RefreshToken jwt string
-	RefreshToken string `json:"refresh_token"`
-
-	// RefreshTokenExpiredAt timestamp
-	RefreshTokenExpiredAt string `json:"refresh_token_expired_at"`
-
-	// SessionId uuid string
-	SessionId string `json:"session_id"`
 }
 
 // User defines model for User.
@@ -117,8 +104,7 @@ type InternalUserLoginParams struct {
 
 // InternalUserLogoutParams defines parameters for InternalUserLogout.
 type InternalUserLogoutParams struct {
-	XSessionId openapi_types.UUID `json:"X-Session-Id"`
-	XRequestId string             `json:"X-Request-Id"`
+	XRequestId string `json:"X-Request-Id"`
 }
 
 // InternalRefreshTokenParams defines parameters for InternalRefreshToken.
@@ -144,8 +130,11 @@ type InternalRemoveUserParams struct {
 // InternalUserLoginJSONRequestBody defines body for InternalUserLogin for application/json ContentType.
 type InternalUserLoginJSONRequestBody = UserLoginBody
 
+// InternalUserLogoutJSONRequestBody defines body for InternalUserLogout for application/json ContentType.
+type InternalUserLogoutJSONRequestBody = RefreshTokenBody
+
 // InternalRefreshTokenJSONRequestBody defines body for InternalRefreshToken for application/json ContentType.
-type InternalRefreshTokenJSONRequestBody = RefreshTokenRequestBody
+type InternalRefreshTokenJSONRequestBody = RefreshTokenBody
 
 // InternalRegisterUserJSONRequestBody defines body for InternalRegisterUser for application/json ContentType.
 type InternalRegisterUserJSONRequestBody = User
